# cycle-trip-planner

./: README.md  cli.py  pyproject.toml  requirements.txt
cycle-planner/: README.md  package-lock.json  package.json
cycle-planner/app/: layout.tsx  page.tsx
cycle-planner/components/: RouteMap.tsx
src/agent/: agent.py  prompts.py  session.py
src/api/: errors.py  main.py  models.py  routes.py
src/tools/: accommodation.py  budget.py  elevation.py  poi.py  route.py  visa.py  weather.py
tests/: conftest.py
tests/test_agent/: test_session.py
tests/test_api/: test_chat.py
tests/test_tools/: test_accommodation.py  test_elevation.py  test_route.py  test_weather.py
