[project]
name = "cycle-trip-planner"
version = "0.1.0"
description = "AI-powered cycling trip planning agent"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai[anthropic]>=0.0.64",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
